--- a/css/main.css
+++ b/css/main.css
@@ -107,127 +107,11 @@ h1, h2 {
     font-weight: 900;
 }
 
-/** timeline box structure **/
-.timeline {
-  list-style: none;
-  padding: 20px 0 20px;
-  position: relative;
+.icon {
+    width: 20px;
+    height: 20px;
+    margin: 0 10px 0 10px;
 }
- 
-.timeline:before {
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  content: " ";
-  width: 3px;
-  background-color: #eee;
-  left: 50%;
-  margin-left: -1.5px;
-}
- 
-.tldate {
-  display: block;
-  width: 200px;
-  background: #414141;
-  border: 3px solid #212121;
-  color: #ededed;
-  margin: 0 auto;
-  padding: 3px 0;
-  font-weight: bold;
-  text-align: center;
-  -webkit-box-shadow: 0 0 11px rgba(0,0,0,0.35);
-}
-
-.timeline li .tl-circ {
-  position: absolute;
-  top: 23px;
-  left: 50%;
-  text-align: center;
-  background: #6a8db3;
-  color: #fff;
-  width: 35px;
-  height: 35px;
-  line-height: 35px;
-  margin-left: -16px;
-  border: 3px solid #90acc7;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
-  z-index: 99999;
-}
- 
-.timeline li {
-  margin-bottom: 25px;
-  position: relative;
-}
-
-.timeline li .timeline-panel {
-  width: 46%;
-  float: left;
-  background: #fff;
-  border: 1px solid #d4d4d4;
-  padding: 20px;
-  position: relative;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  border-radius: 8px;
-  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.15);
-}
- 
-/** panel arrows **/
-.timeline li .timeline-panel:before {
-  position: absolute;
-  top: 26px;
-  right: -15px;
-  display: inline-block;
-  border-top: 15px solid transparent;
-  border-left: 15px solid #ccc;
-  border-right: 0 solid #ccc;
-  border-bottom: 15px solid transparent;
-  content: " ";
-}
- 
-.timeline li .timeline-panel:after {
-  position: absolute;
-  top: 27px;
-  right: -14px;
-  display: inline-block;
-  border-top: 14px solid transparent;
-  border-left: 14px solid #fff;
-  border-right: 0 solid #fff;
-  border-bottom: 14px solid transparent;
-  content: " ";
-}
-.timeline li .timeline-panel.noarrow:before, .timeline li .timeline-panel.noarrow:after {
-  top:0;
-  right:0;
-  display: none;
-  border: 0;
-}
- 
-.timeline li.timeline-inverted .timeline-panel {
-  float: right;
-}
- 
-.timeline li.timeline-inverted .timeline-panel:before {
-  border-left-width: 0;
-  border-right-width: 15px;
-  left: -15px;
-  right: auto;
-}
- 
-.timeline li.timeline-inverted .timeline-panel:after {
-  border-left-width: 0;
-  border-right-width: 14px;
-  left: -14px;
-  right: auto;
-}
-
-
-
 
 /* ==========================================================================
    Helper classes
@@ -314,8 +198,8 @@ h1, h2 {
 }
 
 @media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
+       (-webkit-min-device-pixel-ratio: 1),
+       (min-resolution: 1.0dppx),
        (min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
@@ -331,10 +215,6 @@ h1, h2 {
     *:before,
     *:after {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster:
-                                   http://www.sanbeiji.com/archives/953 */
-        box-shadow: none !important;
-        text-shadow: none !important;
     }
 
     a,
@@ -343,11 +223,11 @@ h1, h2 {
     }
 
     a[href]:after {
-        content: " (" attr(href) ")";
+        content: "";
     }
 
     abbr[title]:after {
-        content: " (" attr(title) ")";
+        content: "";
     }
 
     /*
@@ -359,7 +239,11 @@ h1, h2 {
     a[href^="javascript:"]:after {
         content: "";
     }
-
+    
+    body {
+        font-size: 8pt;
+    }
+    
     pre,
     blockquote {
         border: 1px solid #999;
